# saronia

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: example_aiohttp.py  example_auth.py  example_error_handling.py  example_rnet.py
saronia/: __init__.py  api.py  auth.py  controller.py  error.py  parameters.py  route.py  route.pyi  security.py
saronia/client/: __init__.py  abc.py  aiohttp_client.py  base.py  rnet_client.py  wreq_client.py
saronia/tools/: __init__.py  model_from_signature.py  parameters.py  signature.py
tests/: test_auth.py  test_saronia.py
