[project]
name = "saronia"
version = "1.0.0"
description = "A lightweight, spec-driven builder for API clients and controllers."
readme = "README.md"
authors = [{ name = "luwqz1", email = "howluwqz1@gmail.com" }]
license = { file = "LICENSE" }
maintainers = [{ name = "luwqz1", email = "howluwqz1@gmail.com" }]
requires-python = ">=3.14"
keywords = [
  "async",
  "msgspex",
  "openapi",
  "aiohttp",
  "rnet",
  "aiohttp client",
  "rnet client",
  "api client",
  "fast open api",
  "openapispec",
  "controller",
  "api controller",
  "oas",
  "kungfu",
]
dependencies = ["msgspex>=1.0.1"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[project.optional-dependencies]
rnet = ["rnet>=3.0.0rc22"]
aiohttp = ["aiohttp"]

[dependency-groups]
dev = [
    "ruff>=0.15.4,<1",
    "basedpyright>=1.38.2,<2",
    "pre-commit>=4.5.1,<5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "httpx>=0.28.1",
    "rnet>=3.0.0rc22",
    "aiohttp>=3.13.3",
    "python-multipart>=0.0.22",
]

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "I",
  "D",
  "N",
  "PLR",
  "Q",
  "COM",
  "TC",
  "YTT",
  "SIM",
  "RUF022",
]
ignore = [
  "COM812",
  "N805",
  "N818",
  "TC001",
  "TC002",
  "TC003",
  "TC004",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D202",
  "D203",
  "D205",
  "D209",
  "D211",
  "D213",
  "D400",
  "D401",
  "D404",
  "D415",
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913"
]
fixable = ["ALL"]
unfixable = ["ERA"]
exclude = [".venv", ".idea", "docs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]

[tool.pyright]
exclude = [
  ".venv",
  ".idea",
  ".ruff_cache",
  ".pytest_cache",
  "docs",
  "local",
]
typeCheckingMode = "basic"
pythonPlatform = "All"
pythonVersion = "3.14"
reportMissingImports = true
reportMissingTypeStubs = false
reportSelfClsParameterName = false
